--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <body>
     <h1>Click Counter</h1>
     <div id="gif">
-      <img id="gif-img" src="https://media.giphy.com/media/l0HlKX4WBRoVylqcg/giphy.gif" alt="Animated GIF">
+      <img id="gif-img" src="http://pic.rmb.bdstatic.com/870b9ef34d7f153616816370f29300042656.gif" alt="Animated GIF">
     </div>
     <div id="counter">
       <p>Count: <span id="count">0</span></p>
