--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     function countClicks() {
       count++;
       document.getElementById("count").innerHTML = count;
-      localStorage.setItem("clickCount", count);
+      //localStorage.setItem("clickCount", count);
 
       let gifImg = document.getElementById("gif-img");
       let gifSrc = gifImg.getAttribute("src");
