--- a/index.html
+++ b/index.html
@@ -3,56 +3,20 @@
   <head>
     <title>Click Counter</title>
     <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f0f0f0;
-        margin: 0;
-        padding: 0;
-      }
-      h1 {
-        text-align: center;
-        margin: 20px 0;
-      }
       #gif {
         display: none;
         text-align: center;
       }
       #counter {
         text-align: center;
-        margin-top: 20px;
-      }
-      #count {
-        font-size: 36px;
-        font-weight: bold;
-        color: #333;
-        margin: 0;
-        padding: 0;
-      }
-      button {
-        background-color: #4CAF50;
-        color: white;
-        font-size: 24px;
-        padding: 12px 24px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      }
-      button:hover {
-        background-color: #3e8e41;
-      }
-      img {
-        max-width: 100%;
-        height: auto;
       }
     </style>
     <script>
-      let count = parseInt(localStorage.getItem("clickCount")) || 0;
+      let count = 0;
 
       function countClicks() {
         count++;
         document.getElementById("count").innerHTML = count;
-        localStorage.setItem("clickCount", count);
 
         let gifImg = document.getElementById("gif-img");
         let gifSrc = gifImg.getAttribute("src");
@@ -61,47 +25,18 @@
           gifImg.setAttribute("src", gifSrc);
         }, 10);
 
-        let gifNumber = getGifNumber(count);
-        if (gifNumber !== null) {
-          gifImg.setAttribute("src", `gifs/${gifNumber}.gif`);
-        }
-
         document.getElementById("gif").style.display = "block";
-
-        let sound = document.getElementById("sound");
-        sound.pause();
-        sound.currentTime = 0;
-        sound.play();
-      }
-
-      function resetCounter() {
-        count = 0;
-        document.getElementById("count").innerHTML = count;
-        localStorage.setItem("clickCount", count);
-
-        let gifImg = document.getElementById("gif-img");
-        gifImg.setAttribute("src", "");
-        document.getElementById("gif").style.display = "none";
-      }
-
-      function getGifNumber(clicks) {
-        const gifNumbers = [10, 50, 100, 500, 1000, 5000, 10000, 50000, 100000, 1000000, 10000000, 100000000];
-        for (let i = gifNumbers.length - 1; i >= 0; i--) {
-          if (clicks >= gifNumbers[i]) {
-            return i + 1;
-          }
-        }
-        return null;
       }
     </script>
   </head>
   <body>
     <h1>Click Counter</h1>
     <div id="gif">
-      <img id="gif-img" src="" alt="Animated GIF">
-      <audio id="sound" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" preload="auto"></audio>
+      <img id="gif-img" src="https://media.giphy.com/media/l0HlKX4WBRoVylqcg/giphy.gif" alt="Animated GIF">
     </div>
     <div id="counter">
       <p>Count: <span id="count">0</span></p>
       <button onclick="countClicks()">Click me</button>
-      <button onclick="resetCounter()">Reset</button
+    </div>
+  </body>
+</html>
