--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<h1>Click Counter GIF</h1>
 
 	<div id="gif-container">
-		<img id="gif" src="ILoveCXK.github.io/2.gif" alt="GIF" />
+		<img id="gif" src="2.gif" alt="GIF" />
 	</div>
 
 	<div>
