--- a/index.html
+++ b/index.html
@@ -2,6 +2,39 @@
 <html>
 <head>
 	<title>Animated GIF and Audio Track Player</title>
+	<style>
+		/* Style for the counter */
+		#counter {
+			font-size: 24px;
+			font-weight: bold;
+			text-align: center;
+			margin-top: 20px;
+		}
+
+		/* Style for the GIF */
+		#gif {
+			margin-top: 20px;
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+		}
+
+		/* Style for the audio player */
+		#audio {
+			margin-top: 20px;
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+		}
+
+		/* Style for the button */
+		#button {
+			margin-top: 20px;
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+		}
+	</style>
 </head>
 <body>
 	<div id="counter">0</div>
@@ -15,22 +48,17 @@
 	<script>
 		// Variables to keep track of the current counter, gif, and audio files
 		var counter = 0;
-		var gifFileNames = ["gif_0.gif", "gif_50.gif", "gif_100.gif", "gif_500.gif", "gif_1000.gif", "gif_5000.gif", "gif_10000.gif"];
-		var audioFileNames = ["audio_0.mp3", "audio_50.mp3", "audio_100.mp3", "audio_500.mp3", "audio_1000.mp3", "audio_5000.mp3", "audio_10000.mp3"];
-		var audio = document.getElementById("audio");
-		var gif = document.getElementById("gif");
+		var gifFileNames = ["1.gif", "2.gif", "3.gif", "gif_500.gif", "gif_1000.gif", "gif_5000.gif", "gif_10000.gif"];
+		var audioFileNames = ["soundtrack1.mp3", "audio_50.mp3", "audio_100.mp3", "audio_500.mp3", "audio_1000.mp3", "audio_5000.mp3", "audio_10000.mp3"];
 
-		// Function to update the counter, GIF, and audio file
+		// Function to increment the counter and update the GIF and audio files
 		function incrementCounter() {
-			counter += 1;
+			counter++;
 			document.getElementById("counter").innerHTML = counter;
-
-			if (counter === 50 || counter === 100 || counter === 500 || counter === 1000 || counter === 5000 || counter === 10000) {
-				var index = gifFileNames.indexOf("gif_" + counter + ".gif");
-				if (index !== -1) {
-					gif.src = gifFileNames[index];
-					audio.src = audioFileNames[index];
-				}
+			if (counter == 50 || counter == 100 || counter == 500 || counter == 1000 || counter == 5000 || counter == 10000) {
+				var index = Math.log10(counter / 10);
+				document.getElementById("gif").src = gifFileNames[index];
+				document.getElementById("audio").src = audioFileNames[index];
 			}
 		}
 	</script>
