--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 </head>
 <body>
 	<div id="counter">0</div>
-	<img id="gif" src="gif_0.gif" width="400" height="300">
+	<img id="gif" src="1.gif" width="400" height="300">
 	<audio id="audio" controls>
-		<source src="audio_0.mp3" type="audio/mpeg">
+		<source src="soundtrack1.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>
 	<button id="button" onclick="incrementCounter()">Click Me!</button>
@@ -48,7 +48,7 @@
 	<script>
 		// Variables to keep track of the current counter, gif, and audio files
 		var counter = 0;
-		var gifFileNames = ["1.gif", "2.gif", "3.gif", "gif_500.gif", "gif_1000.gif", "gif_5000.gif", "gif_10000.gif"];
+		var gifFileNames = ["2.gif", "1.gif", "3.gif", "gif_500.gif", "gif_1000.gif", "gif_5000.gif", "gif_10000.gif"];
 		var audioFileNames = ["soundtrack1.mp3", "audio_50.mp3", "audio_100.mp3", "audio_500.mp3", "audio_1000.mp3", "audio_5000.mp3", "audio_10000.mp3"];
 
 		// Function to increment the counter and update the GIF and audio files
