--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   </head>
   <body>
     <div id="gif-container">
-      <img id="gif" src="1.gif" alt="Animated GIF">
+      <img id="gif" src="gif0.gif" alt="Animated GIF">
     </div>
     <div id="audio-container">
-      <audio id="audio" src="soundtrack1.mp3"></audio>
+      <audio id="audio" src="audio0.mp3" onended="replayGifAndAudio()"></audio>
     </div>
     <button id="button">Click Me</button>
     <div id="counter">Count: 0</div>
@@ -39,8 +39,12 @@
       var counterDisplay = document.getElementById("counter");
 
       // Define array of gif and audio filenames
-      var gifs = ["2.gif", "1.gif", "gif100.gif", "gif500.gif", "gif1000.gif", "gif5000.gif", "gif10000.gif"];
-      var audioTracks = ["soundtrack1.mp3", "audio50.mp3", "audio100.mp3", "audio500.mp3", "audio1000.mp3", "audio5000.mp3", "audio10000.mp3"];
+      var gifs = ["gif0.gif", "gif50.gif", "gif100.gif", "gif500.gif", "gif1000.gif", "gif5000.gif", "gif10000.gif"];
+      var audioTracks = ["audio0.mp3", "audio50.mp3", "audio100.mp3", "audio500.mp3", "audio1000.mp3", "audio5000.mp3", "audio10000.mp3"];
+
+      // Hide the audio player by default
+      audio.volume = 0;
+      audio.pause();
 
       // Add event listener to button
       button.addEventListener("click", function() {
@@ -48,14 +52,25 @@
         counter++;
         counterDisplay.innerHTML = "Count: " + counter;
 
-        // Change gif and audio
+        // Change gif and audio and replay
         if (counter === 50 || counter === 100 || counter === 500 || counter === 1000 || counter === 5000 || counter === 10000) {
           var index = counter / 50;
           gif.src = gifs[index];
           audio.src = audioTracks[index];
+          audio.currentTime = 0;
+          audio.volume = 1;
           audio.play();
+        } else {
+          replayGifAndAudio();
         }
       });
+
+      // Function to replay the gif and audio
+      function replayGifAndAudio() {
+        gif.src = gifs[Math.floor(counter / 50)];
+        audio.currentTime = 0;
+        audio.play();
+      }
     </script>
   </body>
 </html>
