--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 			}
 			else {
 				document.getElementById("gif").src = document.getElementById("gif").src;
+                audio.src = "audio" + threshold[audioIndex] + ".mp3";
 				audio.play();
 			}
 		}
