--- a/index.html
+++ b/index.html
@@ -3,12 +3,53 @@
 <head>
 	<title>Click Counter</title>
 	<style>
+		body {
+			background-color: #34495e;
+			color: white;
+			font-family: 'Impact', sans-serif;
+			font-size: 48px;
+			text-align: center;
+			margin-top: 100px;
+		}
+		h1 {
+			font-size: 72px;
+			margin-bottom: 50px;
+			text-shadow: 4px 4px #2c3e50;
+		}
 		#counter {
-			font-size: 36px;
-			margin-bottom: 20px;
+			font-size: 72px;
+			margin-bottom: 50px;
+			text-shadow: 4px 4px #2c3e50;
+		}
+		img {
+			border: 5px solid white;
+			box-shadow: 5px 5px #2c3e50;
+			margin-bottom: 50px;
+			width: 500px;
+			height: auto;
+		}
+		button {
+			background-color: #3498db;
+			border: none;
+			color: white;
+			font-size: 48px;
+			padding: 20px 50px;
+			text-align: center;
+			text-decoration: none;
+			display: inline-block;
+			margin-bottom: 50px;
+			box-shadow: 5px 5px #2c3e50;
+		}
+		button:hover {
+			background-color: #2980b9;
+			cursor: pointer;
 		}
 		#reset {
-			margin-top: 20px;
+			background-color: #e74c3c;
+			box-shadow: 5px 5px #c0392b;
+		}
+		#reset:hover {
+			background-color: #c0392b;
 		}
 	</style>
 	<script>
